[gd_scene load_steps=2 format=3 uid="uid://cframgyp57i3k"]

[ext_resource type="Script" uid="uid://b1sinvpiib870" path="res://src/world/levels/02_reality_tv/menus/phone/phone_number_button.gd" id="1_8nxva"]

[node name="PhoneNumberButton" type="Panel"]
custom_minimum_size = Vector2(128, 128)
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_8nxva")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LettersLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
text = "ABC"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NumberLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 60
text = "2"
horizontal_alignment = 1
vertical_alignment = 1
